# bibimbap-backend

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: rust.yml
migrations/: 20240725050129_create_member_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs  task.rs
src/routes/: health_check.rs
tests/: health_check.rs
