[package]
name = "bibimbap-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bibimbap-backend"

[dependencies]
rocket = "0.5.1"
diesel = { version = "2.2.2", features = ["postgres"] }
diesel_migrations = "2.2.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool"]
